tfes.css
/* ---------------------------------------------------------------------
   Template Name:              VectorLover
   Template Code:              S-0026
   Version:                    1.0
   Author:                     Erwin Aligam
   Author URI:                 http://www.styleshout.com/
   Last Date Modified:         July 31, 2008
   ---------------------------------------------------------------------
   BlazeBlogger Theme Author:  Jaromir Hradilek
   Theme Author URI:           http://www.blackened.cz/
   Theme Version:              1.0.1
   --------------------------------------------------------------------- */

/* Font imports */
@import url(http://fonts.googleapis.com/css?family=Oswald:300|Raleway|Lobster+Two);

   
/* ---------------------------------------------------------------------
   HTML ELEMENTS
   --------------------------------------------------------------------- */

/* Top elements: */
* {
  margin: 0;
  padding: 0;
  outline: 0;
}
body {
  background: #fff url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADrCAMAAACfFAxfAAAACVBMVEVLeI7MzMz///8O0sMpAAAAEElEQVR4AWOgNxgFTDSHjAAVXQBkOiQ6yQAAAABJRU5ErkJggg==') repeat-x;
  font: 12px/170% 'Raleway', Geneva, Verdana, sans-serif;
  font-weight: normal;
  color: #000000;
  text-align: center;
}

/* Android auto-fit workaround */
div {
  background-image: url(images/blank.gif);
}
h2 {
  background-image: url(images/blank.gif);
}
p {
  background-image: url(images/blank.gif);
  width: auto;
}

/* Articles: */
article {
  overflow-wrap: break-word;
  text-align: justify;
  width: 540px;

}

/* Links: */
a, a:visited {
  color: #2976A5;
  background: inherit;
  text-decoration: none;
}
a:hover {
  color: #73471B;
  background: inherit;
  text-decoration: underline;
}

/* Headers: */
h1, h2, h3, h4 {
  font-family: 'Trebuchet MS', 'Helvetica Neue', Arial, Sans-serif;
  font-weight: Bold;
  padding: 10px;
  color: #444;
}
h1 {
  font-size: 2.9em;
}
#header h1 {
  padding: 0px;
}
h2 {
  font-size: 2.5em;
  color: #88AC0B;
}
h3 {
  font-size: 1.6em;
  font-weight: normal;
  padding: 16px 10px 4px 10px;
}

/* Paragraph: */
p {
  padding: 12px 10px;
}
#main p, #sidebar p {
  font-size: 1.1em;
}

/* Lists: */
ul, ol {
  margin: 10px 20px;
  padding: 0 20px;
}
ul {
  list-style: none;
}
dl {
  padding: 10px;
  margin: 0;
}
dt {
  font-weight: bold;
  color: #2E79A6;
}
dd {
  padding-left: 25px;
}

/* Embeds: */
.bbc_img, iframe, .bbc_video, .bbc_audio {
  background: #FAFAFA;
  border: 1px solid #E4E4E4 !important;
  padding: 8px;
  max-width: 100%;
}
img.float-right {
  margin: 5px 0px 10px 10px;
}
img.float-left {
  margin: 5px 10px 10px 0px;
}


/* Code: */
code {
  font: 500 1em/1.5em 'Lucida Console', 'Courier New', monospace;
  border: 1px solid #EEE8E1;
  background: #FAF7F5;
}
pre {
  margin: 5px 0;
  padding: 15px;
  text-align: left;
  display: block;
  overflow: auto;
  font: 500 1em/1.5em 'Lucida Console', 'Courier New', monospace;
  border: 1px solid #EEE8E1;
  background: #FAF7F5;
}

/* Quotations: */
acronym {
  cursor: help;
  border-bottom: 1px dotted #895F30;
}
blockquote {
  margin: 15px 10px;
  padding: 5px 7px 5px 40px;
  font-weight: normal;
  font-size: 17px;
  line-height: 1.6em;
  font-style: italic;
  font-family: Georgia, 'Times New Roman', Times, serif;
  color: #80614D;
  border: 1px solid #EEE8E1;
  background: #FAF7F5 url(images/quote.gif) no-repeat 15px 15px;
}

/* Tables: */
table {
  border-collapse: collapse;
  margin: 15px 10px;
}
th {
  height: 38px;
  padding-left: 12px;
  padding-right: 12px;
  color: #fff;
  text-align: left;
  background: #ADF163;
  border-width: 1px;
  border-style: solid;
  border-color: #C4DE8F #93C138 #93C138 #C4DE8F;
}
tr {
  height: 34px;
  background: #fff;
}
td {
  padding-left: 11px;
  padding-right: 11px;
  border: 1px solid #E7F0CC;
}

/* Forms: */
/* form {
  margin: 20px 10px;
  padding: 15px 25px 25px 20px;
  border: 1px solid #EEE8E1;
  background: #FAF7F5;
} */
form p {
  border-bottom: 1px solid #ECE5DD;
  padding: 12px 0 5px 0;  margin: 0;
  color: #9D6D37;
}
label {
  font-weight: bold;
  color: #A7743B;
}
input, select, textarea {
  font-family: 'Raleway';
  font-weight: normal;
  margin: 5px 0;
  padding: 5px;
  color: #6A6969;
  border-width: 1px;
  border-style: solid;
  border-color: #ddd;
  border-radius: 5px;
}
option {
  padding-right: 0.5em;
}
#name, #email, #message, #website{
  width: 455px;
}
input.button {
  font: bold 12px Arial, Sans-serif;
  height: 30px;
  margin: 0;
  padding: 2px 3px;
  color: #fff;
  background: #A6CD56;
  border-width: 1px;
  border-style: solid;
  border-color: #C4DE8F #8DB836 #8DB836 #C4DE8F;
}


/* ---------------------------------------------------------------------
   PAGE LAYOUT
   --------------------------------------------------------------------- */
#wrap {
  position: relative;
  width: 952px;
  margin: 0px auto 30px auto;
  text-align: left;
}
#content {
  clear: both;
  float: left;
  width: 952px;
  padding: 25px 0 60px 0;
}
#header {
  position: relative;
  width: 952px;
  height: 185px;
  color: #fff;
  padding: 0;
  margin: 0;
}
#header img {
  border-width: 0px;
  padding: 0px;
  position: absolute;
  bottom: 0px;
  overflow: hidden;
}

/* Navigation: */
#nav {
  clear: both;
  padding: 0;
  margin: 0;
  width: 952px;
  height: 50px;
}
#nav ul {
  float: left;
  list-style: none;
  margin: 2px 0 0 0;
  height: 45px;
  padding: 0 0 0 40px;
}
#nav ul li {
  float: left;
  margin: 0;
  padding: 0 0 0 10px;
}
#nav ul li a {
  float: left;
  margin: 0;
  padding: 0 17px 0 0px;
  color: #888;
  font: 15px/45px 'Oswald';
  font-weight: 300;
  text-decoration: none;
}
#nav ul li a:hover,
#nav ul li a:active {
  color: #000;
}
#nav ul li#current {
  background: transparent url(images/left-tab.gif) no-repeat;
}
#nav ul li#current a {
  color: #2C4B5D;
  background: transparent url(images/right-tab.gif) no-repeat right top;
}

/* Main column: */
#main {
  float: left;
  width: 565px;
  padding: 0;
  margin: 0 0 0 40px;
  display: inline;
}
#main h2 {
  font: 32px 'Oswald';
  font-weight: 300;
  color: #555;
  padding: 10px 0 0 5px;
  margin-left: 5px;
  line-height: 32px;
}
#main h2 a {
  font-size: 0.8em;
  color: #555;
  text-decoration: none;
}
#main ul li {
  list-style-image: url(images/bullet.gif);
}

/* Library: */
#lib {
  float: left;
  width: 892px;
  padding: 0;
  margin: 0 0 0 40px;
  display: inline;
}
#libwrap {
  position: relative;
  width: 952px;
  margin: 0px auto 30px auto;
  text-align: left;
}
#lib h2 {
  font: 32px 'Oswald';
  font-weight: 300;
  color: #555;
  padding: 10px 0 0 5px;
  margin-left: 5px;
  line-height: 32px;
}
#lib h2 a {
  color: #51432f;
  text-decoration: none;
}
#lib ul li {
  list-style-image: url(images/libbullet.png);
}

/* Sidebar column: */
#sidebar {
  float: right;
  width: 285px;
  padding: 0;
  margin: 0 45px 0 0;
  display: inline;

}
#sidebar h3 {
  color: #555;
  font: 24px 'Lobster Two';
  text-transform: none;
  padding: 5px 0px 0px 0px;
  margin: 21px 10px 5px 10px;
  border-bottom: 3px double #ddd;
  text-align: center;
}

/* Sidebar menu: */
#sidebar .sidemenu {
  margin: 10px 10px 5px 7px;
  padding: 0;
  text-decoration: none;
}
#sidebar .sidemenu li {
  list-style: none;
  margin: 0;
  padding: 8px 10px;
  border-bottom: 1px solid #E8E8E8;
}
* html body #sidebar .sidemenu li {
  height: 1%;
}
#sidebar .sidemenu li a {
  text-decoration: none;
  color: #23739A;
  background: none;
  font-weight: normal;
}
#sidebar .sidemenu li a span {
  color: #7F7F7F;
  font-size: .9em;
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-style: italic;
  font-weight: normal;
}
#sidebar .sidemenu li a:hover {
  color: #000;
  background: none;
}
#sidebar .sidemenu ul {
  margin: 0 0 0 5px;
  padding: 0;
}
#sidebar .sidemenu ul li {
  border: none;
}

/* Header quick search: */
#sidebar form#qsearch {
  padding: 0;
  margin: 20px 0 30px 10px;
  border: none;
  width: 270px; height: 33px;
  background: #F2F0F0 url(images/qsearch.gif) no-repeat;
}
#sidebar form#qsearch p {
  margin: 0; padding: 0;
}
#sidebar form#qsearch input {
  float: left;
  border: none;
  background: transparent;
  color: #B8B8B8;
  margin: 0;
}
#sidebar form#qsearch .tbox {
  margin: 5px 0 0 5px;
  width: 220px;
  display: inline;
  font: 1em 'Trebuchet MS', 'Helvetica Neue', Arial, Sans-serif;
}
#search form#qsearch .btn{
  width: 24px; height: 24px;
}
#sidebar form#qsearch label {
  display: none;
}

/* Footer: */
#footer {
  clear: both;
  width: 952px;
  margin: 0;
  padding: 30px 0 25px 0;
  font-family: 'Trebuchet MS', 'Helvetica Neue', Arial, Sans-serif;
  font-size: 0.95em;
  color: #777;
  text-align: center;
  letter-spacing: .2px;
  border-top: 1px solid #ddd;
}
#footer p {
  padding:10px 0;
}
#footer a:hover {
  color: #555;
  border-bottom: 1px dotted #555;
  text-decoration: none;
}

/* Section information: */
.section {
  font-size: 1.6em;
  font-weight: normal;
  padding: 16px 10px 4px 10px;
}

/* Post metadata: */
.information {
  font-size: .95em;
  padding: 0 10px;
  margin-left: 2px;
  color: #887050;
}
.information a, .information a:visited {
  color: #333;
}
.post-footer {
  padding: 8px 10px;
  margin: 15px 10px 10px 10px;
  color: #57977C;
  border: 1px solid #EEE8E1;
  background: #FAF7F5;
}
.post-footer a, .post-footer a:visited {
  color: #57977C;
}

/* Archive navigation: */
.previous {
  padding: 12px 10px;
  float: left;
}
.next {
  padding: 12px 10px;
  float: right;
}

/* Comments list: */
ol.commentlist {
  margin: 12px 10px;
  padding: 0;
  border-style: solid;
  border-color: #EEE8E1;
  border-width: 1px 1px 0 1px;
}
.commentlist li {
  margin: 0;
  padding: 10px;
  list-style: none;
  border-bottom: 1px solid #EEE8E1;
}
.commentlist li cite {
  display: block;
  font-style: normal;
  font-weight: bold;
  padding: 7px;
}
.commentlist li cite img {
  float: left;
  margin-right: 10px;
}
.commentlist li cite .comment-data {
  font-size: .8em;
  font-weight: normal;
}
.commentlist li .comment-text {
  clear: both;
  margin: 0;
  padding: 0;
}
.commentlist li.alt {
  background: #FAF7F5;
}

/* Alignment classes: */
.float-left  { float: left; }
.float-right { float: right; }
.align-left  { text-align: left; }
.align-right { text-align: right; }

/* Display and additional classes: */
.no-border {
  border: none;
}
.clearer {
  clear: both;
}
.clear {
  display:inline-block;
}
.clear:after {
  display: block;
  visibility: hidden;
  clear: both;
  height: 0;
  content: ".";
}

tt {
  font-size: .8em;
}

/* Search bar stuff: */

#searchbar {
  position: absolute;
  right: 55px;
  margin-top: 5px;
}

/* Cleaning up "About": */

#sidebar p { 
  text-align: justify;
}

